examples/global/patch-catch-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catch-all-ingress
  namespace: ingress-nginx
spec:
  tls:
    - hosts:
        - "*.zbmowrey.com"
      secretName: domain-zbm001-cert
  rules:
    - host: "*.zbmowrey.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: custom-default-backend
                port:
                  number: 80
